# codex

./: README.md  pyproject.toml
configs/: flux1_config.json  pixelcnn_config.json
docs/: pixelcnn_flux1_workflow.md
scripts/: run_pipeline.sh
src/pixelcnn_flux1_pipeline/: __init__.py  __main__.py  config.py  pipeline.py  utils.py
web/: index.html  styles.css
